fixing alignment registration

--- a/client/LandingPage/landingpage.css
+++ b/client/LandingPage/landingpage.css
@@ -322,7 +322,7 @@ body {
     position: relative;
     display: inline-block;
     vertical-align:middle;
-    width: 25vw;
+    width: 25%;
     margin-left: 2.5%;
     margin-right: 2.5%;
     margin-top: 5%;
